API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes


20-Nov-2000	Troy A. Griffitts <scribe@crosswire.org>
	Added new utility, step2vpl, for dumping BSISG STEP module in
		vpl format.

17-Nov-2000	Troy A. Griffitts <scribe@crosswire.org>
	Added new utility, stepdump, for dumping BSISG STEP modules.

11-Nov-2000	Joachim Ansorg <jansorg@crosswire.org>
	Commited new version of the sk locale file.


* Release 1.5.1a *


06-Nov-2000	Troy A. Griffitts <scribe@crosswire.org>
	Added more debug for tests/mgrtest.cpp
	Hardcoded VerseKey::NewIndex to KJV max index

01-Nov-2000	Joachim Ansorg <jansorg@crosswire.org> 
	Added test program for indexes using VerseKey::NewIndex()

31-Oct-2000	Joachim Ansorg <jansorg@crosswire.org>
	Fixed vpl2mod to work correctly with headers and files without
		references.

30-Oct-2000	Troy A. Griffitts <scribe@crosswire.org>
	Hacked SWModule::Search to hardcode high index always to
		32300 for now until we get NewIndex working properly.
		This will be inaccurate for range searches but will
		always return a value between 0-100
	Made rawverse.cpp utility functions to not be so picky
		about trailing '/' or '\' on path names.
	Made vpl2mod work better when 'prepend verse ref' option
		is turned on.  There seems to be no sense in outputting
		blank entries in this scenerio.

29-Oct-2000	Joachim Ansorg <jansorg@crosswire.org>
	Reverted the patch from 23-Oct-2000
	gbfhtml.cpp: Changed the HTML tag for new paragraph from <P> to <BR>
		because it's bad HTML without a closing </P> tag.

23-Oct-2000		Joachim Ansorg <jansorg@crosswire.org> 
	Changed the provate section of versekey.h into a protected  one
because we need the change for current BibleTime!

15-Oct-2000	Troy A. Griffitts <scribe@crosswire.org>
	Normalized Writable interface to SWModule.
	Fixed RawVerse settext to correctly append a dos nl.
	Fixed vpl2mod to correctly strip 10s and 13s from input.
	Added verse ref parsing functionality to vpl2mod.